--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
 	<meta charset="UTF-8">
 	<title>Basic Documentation Page</title>
 	<link href="./css/style.css" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Fira+Sans|Lato" rel="stylesheet">
 
 </head>
 
 <body>
+
 	<aside class="chapterlist">
 		<div class="content">
 			<h2>Chapters</h2>
@@ -35,8 +37,13 @@
 	</aside>
 
 	<section class="mainbody">
+
+		<header>
+				<h1>Basic Documentation Page</h1>
+		</header>
+
 		<div class="content">
-			<h1>Page title</h1>
+			<h1>An alphabet of animals</h1>
 			<div id="aardvark">
 				<h3>Aardvark</h3>
 				<div class="left-img">
